<resources>
    <string name="app_name">Allpoint</string>
    <string name="en_mainMenuSearchTitle">Search</string>
    <string name="en_mainMenuMessagesTitle">Messages</string>
    <string name="en_mainMenuSettingsTitle">Settings</string>
    <string name="en_mainMenuAboutTitle">About</string>
    <string name="en_mainMenuHome">Home</string>
    <string name="en_mainMenuMore">More</string>
    <string name="en_mainMenuScanTitle">Verify Card</string>
    <string name="en_mainMenuTransTitle">History</string>
    <string name="en_messagesLayoutTitle">Messages</string>
    <string name="en_messagesDeleteMessages">Delete</string>
    <string name="en_messagesReadMessages">Mark as Read</string>
    <string name="en_messagesEditTextOn">Done</string>
    <string name="en_messagesEditTextOff">Edit</string>
    <string name="en_messagesNoMessagesText">No Messages</string>
    <string name="en_detailViewLayoutTitle">Details</string>
    <string name="en_detailViewServicesTitle">Services</string>
    <string name="en_detailViewHoursTitle">Hours</string>
    <string name="en_pinViewLayoutTitle">View Location</string>
    <string name="en_searchResultLayoutTitle">Search Result</string>
    <string name="en_aboutLayoutTitle">About</string>
    <string name="en_settingsSearchPreferenceTitle">SEARCH PREFERENCE</string>
    <string name="en_settingsVisitGooglePlay">Visit us on Google Play</string>
    <string name="en_registrationProfile">Sign Up</string>
    <string name="en_settingsEditProfile">Profile</string>
    <string name="en_settingsGeofenceOnOff">Geofence Alerts</string>
    <string name="en_settingsLaunchWithNearMe">Launch when near me</string>
    <string name="en_settingsDistanceUnits">Distance Unit</string>
    <string name="en_settingsDistanceUnitsKm">Kilometers</string>
    <string name="en_settingsDistanceUnitsMi">Miles</string>
    <string name="en_settingsLanguage">Language</string>
    <string name="en_settingsFeedback">Feedback</string>
    <string name="err_server_Connection">Unable To Connect Server, Please Check Internet Connection!</string>
    <string name="en_settingsAppVersion">Version</string>
    <string name="en_shareTitle">Share via</string>
    <string name="en_shareEmail">EMail</string>
    <string name="en_shareMessaging">Messaging</string>
    <string name="en_messageLayoutTitle">Message View</string>
    <string name="en_dialogCannotGetPosition">Your location cannot be determined correctly at this moment</string>
    <string name="en_dialogOk">OK</string>
    <string name="en_dialogCancel">Cancel</string>
    <string name="en_dialogLoadingTitle">Loading</string>
    <string name="en_dialogPleaseWait">Please wait...</string>
    <string name="en_dialogCannotConnectTitle">There is no connectivity</string>
    <string name="en_dialogCannotConnectText">Network connectivity is necessary to use this feature. Please check the
        network settings on your phone.</string>
    <string name="en_dialogTxtForMaxAttempt">You have reached maximum attempts to reset password.Please try again</string>
    <string name="en_dialogPanInActive">Card is not in Surcharge-Free Network.</string>
    <string name="en_dialogXmlParserNotInitialized">Parser was not initialized.</string>
    <string name="en_dialogSmsNotSupported">Sms sending option is not supported on this device.</string>
    <string name="en_dialogParsingError">Error occurred while processing query from server. Please try again.</string>
    <string name="en_dialogUpdate">New version is available. Please, update now.</string>
    <string name="en_dialogForceUpdate">You should update Allpoint application right now.</string>
    <string name="en_dialogRemoveMessages">Are you sure want to remove selected messages?</string>
    <string name="en_dialogReadMessages">Are you sure want to mark as read selected messages?</string>
    <string name="en_dialogMessageMarked">Message was marked as read</string>
    <string name="en_dialogServiceUnavailable">Currently our service is unavailable. Please try later.</string>
    <string name="en_dialogPlayServicesUnavailable">Google Play Services is unavailable. Please try later.</string>
    <string name="en_cardScreenTitle">CLICK A CARD TO REVIEW OR EDIT...</string>
    <string name="en_addCard">Add Card</string>
    <string name="en_amount">Amount</string>
    <string name="en_date">Date</string>
    <string name="en_txntype">Transaction Type</string>
    <string name="en_titleTransaction">Transactions</string>
    <string name="en_TermsAndCondtionTitle">Terms And Conditions</string>
    <string name="en_dialogNoResults">No results were found.</string>
    <string name="en_card_history_disable">Transaction history is not available at this time.</string>
    <string name="es_mainMenuMessagesTitle">Mensajes</string>
    <string name="es_mainMenuSettingsTitle">Ajustes</string>
    <string name="es_mainMenuAboutTitle">Acerca de</string>
    <string name="es_mainMenuSearchTitle">Buscar</string>
    <string name="es_mainMenuHome">Casa</string>
    <string name="es_mainMenuMore">Más</string>
    <string name="es_mainMenuScanTitle">tomografía</string>
    <string name="es_mainMenuTransTitle">historia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="changePassText">Please enter your current or temporary password and new password.</string>
    <string name="changePassTextforForget">Please enter your new password and confirm password.</string>
    <string name="Verify_email_title">Verify Email</string>
    <string name="first_time_reg_msg">Please enter your email address below for verification</string>
    <string name="forgetPassText">Please provide your registered email address to receive instructions to reset your password</string>
    <string name="username_emailid_hint">Registered Email</string>
    <string name="register_emailid_hint">Email</string>
    <string name="otp_title">Validate OTP</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="otp_info_text">Please check your email and enter the One Time Password (OTP) below</string>
    <string name="Err_Msg_OTPValid">Please enter a valid Valid One Time Password"</string>
    <string name="otp_not_received">Not received One Time Password yet?</string>
    <string name="otp_info_sms_text">Please enter One Time Password received by SMS</string>
    <string name="otp_Email_hint">Email One Time Password</string>
    <string name="otp_SMS_hint">SMS One Time Password</string>
    <string name="otp_email_not_received">Not received Email One Time Password yet?</string>
    <string name="otp_sms_not_received">Not received SMS One Time Password yet?</string>
    <string name="otp_reg_received">Not received OTP yet?</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="old_password_hint">Old Password</string>
    <string name="send">Send</string>
    <string name="verify">Verify</string>
    <string name="submit">Submit</string>
    <string name="card_number">Card Number</string>
    <string name="scan_card_text">Scan your card</string>
    <string name="text_cardactivity_text">Tap on camera image to verify your card’s access to the Allpoint Surcharge Free Network</string>
    <string name="or_text">-------------------------- OR -------------------------</string>
    <string name="text_card_manual_text">To verify your card manually, please enter your full card number in the box below to verify your cards access to the Allpoint Surcharge Free Network</string>
    <string name="login_atmpass">Signup For ATMpass</string>
    <string name="add_card">Verify Card</string>
    <string name="forget_password_title">Forgot Password</string>
    <string name="check_card_title">Check Card</string>
    <string name="change_password_title">Change Password</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="card_success">Card Added</string>
    <string name="card_success_msg">Success !</string>
    <string name="login">Sign In</string>
    <string name="cancel_button">Cancel</string>
    <string name="signup_title">Sign Up</string>
	<string name="continue_button">Continue</string>
	<string name="en_settingslogout">Logout</string>
    <string name="email_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="account_history">Find Allpoint ATMs and receive alerts for nearby surcharge free ATM’s</string>
    <string name="signup">Sign Up Now</string>
    <string name="forgetPassword">Forgot your Password?</string>
    <string name="skip">Skip</string>
    <string name="user_not_active">OTP sent on your email id, Please validate OTP to complete Registration process.</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_email">Confirm Email Address</string>
    <string name="email_msg">This will be your Username</string>
    <string name="mobile_hint">Mobile Number</string>
    <string name="postal_zipcode_hint">Postal Zipcode</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="subscribe">Subscribe</string>
    <string name="tc">Yes, please alert me about nearby surcharge-free ATMs. By subscribing, I agree to the
 	<u>Terms of use.</u></string>
    <string name="card_fail_msg">Failed!</string>
    <string name="maskCardNo">XXXX XXXX XXXX</string>
    <string name="success_message">Congratulations! Your card participates in the Allpoint Network. Use the search feature to locate your most convenient Allpoint surcharge free ATM.</string>
    <string name="failure_message">Your card does not currently participate in the Allpoint Network. Please contact your financial institution about joining Allpoint.</string>
    <string name="en_updateProfileSave">Save</string>
    <string name="card_failue_title">Invalid Card</string>
    <string name="historyTitle">Cards</string>
    <string name="reg_mob_no_msg">Registration Invalid. Please Try Again</string>
    <string name="Err_Msg_OTP">Please enter One Time Password</string>
    <string name="Err_Msg_FIrstName">Please enter First Name</string>
    <string name="Err_Msg_LsatName">Please enter Last Name"</string>
    <string name="Err_Msg_EmptySpace">Empty spaces are not allowed!"</string>
    <string name="Err_MSG_EMaild">Please enter Email Address"</string>
    <string name="Err_Msg_EmailValid">Please enter a valid Email Address"</string>
    <string name="Err_MSG_ConfirmEMaild">Please enter Confirm Email Address"</string>
    <string name="Err_Msg_ConfirmEmailValid">Please enter a valid Confirm Email Address"</string>
    <string name="Err_Msg_mobileNumber">Please enter Mobile Number"</string>
    <string name="Err_Msg_MobileValidtaion">Please enter a valid Mobile Number"</string>
    <string name="Err_msg_Password">Please enter password"</string>
    <string name="Err_msg_ConfirmPassword">Please enter Confirm Password"</string>
    <string name="Err_msg_ConfrimPassword">Please confirm the Password"</string>
    <string name="Err_Msg_PwdCombMatch">Password should meet the password combination"</string>
    <string name="Err_Msg_ConfirmCombPwdMatch">Confirm Password should meet the Password combination"</string>
    <string name="Err_Msg_PwdLength">Password should be in between the range of 8 - 16 digit"</string>
    <string name="Err_Msg_PwdMatch">Password &amp; Confirm Password should matched"</string>
    <string name="Err_Msg_EmailMatch">Email Address &amp; Confirm Email Address should match"</string>
    <string name="en_filtersLayoutTitle">Filter</string>
    <string name="en_filtersSelectTitle">SELECT FILTER BY</string>
    <string name="en_filtersBtnDone">Done</string>
</resources>