<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_panel">

        <TextView
                style="@style/top_bar_title_style"
                android:text="@string/change_password_title"
                />

        <TextView
                android:id="@+id/cancel"
                style="@style/top_bar_btn_cancel_style"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/white"
            android:gravity="top"
            android:orientation="vertical">

        <TextView
            	android:id="@+id/change_pass_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/changePassText"
                android:textSize="@dimen/commonTextSize"
                android:textColor="@android:color/darker_gray"/>

         <EditText
                android:id="@+id/iEdTxtOldPassword"
                style="@style/edit_text_style"
                android:layout_marginTop="20dp"
                android:hint="@string/old_password_hint"
                android:inputType="textPassword">
        </EditText> 

        <EditText
                android:id="@+id/iEdTxtNewPassword"
                style="@style/edit_text_style"
                android:hint="@string/new_password_hint"
                android:inputType="textPassword"/>

        <EditText
                android:id="@+id/iEdTxtConfirmPassword"
                style="@style/edit_text_style"
                android:hint="@string/confirm_new_password_hint"
                android:inputType="textPassword"/>

        <Button
                android:id="@+id/iBtnSend"
                style="@style/button_style"
                android:text="@string/submit"/>
    </LinearLayout>

</LinearLayout>