<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/white"
                android:orientation="vertical">

    <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/gradient_panel">

        <TextView
                android:id="@+id/cancel"
                style="@style/top_bar_btn_cancel_style"/>

        <TextView
            	android:id="@+id/titleSendMail"
                style="@style/top_bar_title_style"
                android:text="@string/forget_password_title"
                />
    </RelativeLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:gravity="top"
            android:layout_marginTop="120dp"

            android:orientation="vertical">

        <TextView
            	android:id="@+id/txtMsgDisplay"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
				style="@style/top_bar_btn_login_style"
                android:text="@string/forgetPassText"
                android:textColor="@android:color/darker_gray"/>

        <EditText
                android:id="@+id/iEdTxtemailID"
                style="@style/edit_text_style"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:inputType="textWebEmailAddress"
                android:hint="@string/username_emailid_hint"/>


        <Button
                android:id="@+id/iBtnSubmit"
                style="@style/button_style"
                android:text="@string/send"/>
    </LinearLayout>
</RelativeLayout>