<?xml version="1.0" encoding="utf-8"?>

<!-- suppress AndroidLintOverdraw -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              android:orientation="vertical">

    <RelativeLayout
            android:id="@+id/relativeLayout"
            style="@style/top_bar_rel_lay_style">

        <TextView
                android:id="@+id/tvFiltersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/btnFiltersDone"
                android:layout_marginLeft="24dp"
                android:gravity="center"
                android:text="@string/en_filtersLayoutTitle"
                android:textColor="@color/white"
                android:textSize="18dp"/>

        <Button
                android:id="@+id/btnFiltersDone"
                android:layout_width="65dp"
                android:layout_height="28dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="9dp"
                android:background="@drawable/filters_button_done"
                android:text="@string/en_filtersBtnDone"
                android:textColor="@color/white"
                android:textSize="16dp"/>

        <ImageButton
                android:id="@+id/iBtnFiltersBack"
                android:layout_width="24dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignTop="@+id/tvFiltersTitle"
                android:background="@null"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="centerInside"
                android:src="@drawable/panel_button_arrow"/>
    </RelativeLayout>

    <TextView
            android:id="@+id/tvSelectFilterBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/en_filtersSelectTitle"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"/>

    <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/white"
            android:cacheColorHint="#00000000"
            android:choiceMode="none"
            android:divider="@color/lightGray"
            android:dividerHeight="2dp"
            android:scrollingCache="false"/>

</LinearLayout>